# course_work3

./: README.md  pyproject.toml
src/: data.py  main.py  utils.py
tests/: conftest.py  test_data.py  test_main.py  test_operations.json  test_utils.py
