[tool.poetry]
name = "course-work3"
version = "0.1.0"
description = ""
authors = ["Victoria Kashpur <vikki0011@gmail.com>"]
readme = "README.md"
packages = [{include = "course_work3"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
